Fixed the level box width on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@ header {
   letter-spacing: 0.1rem;
   line-height: 30px;
   margin: 0.5rem;
-  width: 110px;
+  width: 125px;
   padding: 0 20px;
   text-align: center;
   text-decoration: none;
